Made page zoom handling work with smooth scroll devices This CL is a smaller set of the CL https://codereview.chromium.org/688253002/ It fixes some broken functionality exposed by that CL.

R=avi
BUG=384970

Review URL: https://codereview.chromium.org/1554253004

Cr-Commit-Position: refs/heads/master@{#367850}

Former-commit-id: 49bcd394cf41b1c330c3ffbcae42ff5161352380